@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Track how many ticks the character has been played.  Piece of information
+tracking easy to add in.  Output is shown in the statistics command.
+MSW 2009-12-07
+
 Send 'pickup' update to clients requesting it when the player
 uses the 'pickup' command directly.
 Nicolas Weeger 2009-12-06
